--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,12 @@
 {
   "manifest_version": 3,
-  "version": "1.0",
+  "version": "1.1",
   "name": "Leads tracker",
   "action": {
     "default_popup": "index.html",
     "default_icon": "icon.png"
   },
-  "permissions": ["tabs"]
+  "permissions": [
+    "tabs"
+]
 }
